Add form field creation features

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -140,3 +140,9 @@
     left: 20px !important;
     right: 20px !important;
 }
+
+/*@media (min-width: 769px) {
+    .has-detached-right .sidebar-detached.affix {
+        left: 995px;
+    }
+}*/
